# tts-server

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-dev  Pipfile  convert-onnx.bat  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
data/src/: load_g2pk.py  main.py
data/src/app/: server.py  synthesys.py  text_processer.py
data/src/app/static/: style.css
data/src/app/templates/: oc-overlay.html  text-inference.html
data/src/flask/: server.py  synthesys.py  text_processer.py
data/src/flask/static/: mvp.css
data/src/flask/templates/: cc-overlay.html  cc.html  oc-overlay.html  test.html  text-inference.html
